Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 3.2.0
-
ghx-label-6
Description
The issue is:
- type is a required field for TCounter with enum type TUnit
- Some readers (e.g. Java) that encounter an unknown enum value replace it it with null, then throw an exception because it is a required field
This means that the workflow for adding a new TUnit is basically broken, since we can't add a unit in Impala then update readers later.
I think we should switch to TIME_NS then reconsider the workflow here.
Attachments
Issue Links
- is related to
-
IMPALA-8236 Adding new TUnit values to runtime profile is broken
- Open