IMPALA-8235: avoid TIME_MS in runtime profile

There are issues with using new TUnit values in runtime profiles that
are consumed by readers with an older version of the thrift
definitions.

Work around the issue by using the older TIME_NS type for this
counter.

Testing:
Confirmed manually that a tool with an old version of the thrift API
(Cloudera Manager) could parse the profile.

Change-Id: Ia6a0846f401ced1947187b8581563de9dbb4fe53
Reviewed-on: http://gerrit.cloudera.org:8080/12544
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>